[gd_scene load_steps=6 format=3 uid="uid://btth2ka2rfvra"]

[ext_resource type="Texture2D" uid="uid://bwsu1iyq3uy0h" path="res://assets/Kirara_Grimorio.png" id="1_7xurc"]
[ext_resource type="Script" path="res://weapons/grimorio.gd" id="1_lqt74"]
[ext_resource type="Script" path="res://weapons/bulletdamage.gd" id="2_6y3du"]
[ext_resource type="AudioStream" uid="uid://wqui5ycjan5d" path="res://audio/Bola_de_FOgo.mp3" id="3_8oh3t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4dyew"]
radius = 23.6008

[node name="grimorio" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_lqt74")

[node name="guntimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_4dyew")
disabled = true

[node name="weaponP_grimoire" type="Marker2D" parent="."]

[node name="bulspawn" type="Marker2D" parent="weaponP_grimoire"]
unique_name_in_owner = true
position = Vector2(149, -1)
scale = Vector2(0.238591, 0.220588)
script = ExtResource("2_6y3du")

[node name="sprite_grimoire" type="Sprite2D" parent="weaponP_grimoire"]
unique_name_in_owner = true
position = Vector2(74, -1)
rotation = 1.5708
scale = Vector2(3.20455, 3.20455)
texture = ExtResource("1_7xurc")
region_enabled = true
region_rect = Rect2(164, 169, 15, 17)

[node name="channel2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_8oh3t")
volume_db = -10.285

[connection signal="timeout" from="guntimer" to="." method="_on_guntimer_timeout"]
