[gd_scene load_steps=13 format=3 uid="uid://dut4jck1kp1yx"]

[ext_resource type="Script" path="res://weapons/bulletdamage.gd" id="1_r8ylj"]
[ext_resource type="Script" path="res://weapons/mimicry.gd" id="1_t1v3v"]
[ext_resource type="Texture2D" uid="uid://b27e2ub40ot0n" path="res://assets/EGOWeaponMimicry.png" id="2_d8cjh"]
[ext_resource type="VideoStream" path="res://video/greatsplit-vertical.ogv" id="3_bw48n"]
[ext_resource type="Texture2D" uid="uid://sytkja8ot5tc" path="res://characters/cirno.webp" id="4_4fudm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqc6e"]
size = Vector2(210, 74)

[sub_resource type="CircleShape2D" id="CircleShape2D_24g8t"]
radius = 593.003

[sub_resource type="CircleShape2D" id="CircleShape2D_3gk18"]

[sub_resource type="Animation" id="Animation_1reda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_mimicry/Mimicry:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -7.10543e-15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("handle_mimicry/Mimicry:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6jvhf"]
resource_name = "slash_l"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_mimicry/Mimicry:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("handle_mimicry/Mimicry:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.93208, 0.920182, 0.920182, 0.0]
}

[sub_resource type="Animation" id="Animation_s7rrr"]
resource_name = "slash_r"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_mimicry/Mimicry:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.93033, -0.919789, -0.919789, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3myu"]
_data = {
"RESET": SubResource("Animation_1reda"),
"slash_l": SubResource("Animation_6jvhf"),
"slash_r": SubResource("Animation_s7rrr")
}

[node name="mimicry" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_t1v3v")

[node name="cdtimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="handle_mimicry" type="Marker2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_r8ylj")

[node name="Mimicry" type="Sprite2D" parent="handle_mimicry"]
unique_name_in_owner = true
position = Vector2(8, -7.10543e-15)
scale = Vector2(0.196608, 0.234883)
texture = ExtResource("2_d8cjh")
offset = Vector2(412.866, -5.25744)
flip_h = true

[node name="hitbox" type="Area2D" parent="handle_mimicry/Mimicry"]
unique_name_in_owner = true
position = Vector2(-40.6901, 3.02509e-14)
scale = Vector2(5.08626, 4.25744)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="handle_mimicry/Mimicry/hitbox"]
position = Vector2(104, 0)
shape = SubResource("RectangleShape2D_qqc6e")

[node name="split" type="Area2D" parent="handle_mimicry"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="handle_mimicry/split"]
visible = false
shape = SubResource("CircleShape2D_24g8t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3gk18")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3myu")
}

[node name="canvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="split" type="VideoStreamPlayer" parent="canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_bw48n")
expand = true

[node name="DonQuixote" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.28, 0.291815)
texture = ExtResource("4_4fudm")

[node name="split_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0
one_shot = true

[node name="tracker" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="split_limit" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[connection signal="timeout" from="cdtimer" to="." method="_on_cdtimer_timeout"]
[connection signal="body_entered" from="handle_mimicry/Mimicry/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="split_timer" to="." method="_on_split_timer_timeout"]
[connection signal="timeout" from="split_limit" to="." method="_on_split_limit_timeout"]
