[gd_scene load_steps=13 format=3 uid="uid://dal0b1e3irjr8"]

[ext_resource type="Texture2D" uid="uid://dmtyt3qiw3hjf" path="res://assets/Blacksilence_weapons/roland_durandal.png" id="1_iq463"]
[ext_resource type="Script" path="res://weapons/sword.gd" id="1_utta7"]
[ext_resource type="Script" path="res://weapons/bulletdamage.gd" id="3_cdjli"]
[ext_resource type="Texture2D" uid="uid://sytkja8ot5tc" path="res://characters/cirno.webp" id="4_tian4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_102v0"]
size = Vector2(241, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_sws4n"]

[sub_resource type="Animation" id="Animation_l8pln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_longsword/RolandDurandal:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_grpq3"]
resource_name = "rest"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_longsword/RolandDurandal:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0777c"]
resource_name = "slash_1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_longsword/RolandDurandal:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.52121, 1.4347]
}

[sub_resource type="Animation" id="Animation_c6eh3"]
resource_name = "slash_2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_longsword/RolandDurandal:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.4347, -1.37008]
}

[sub_resource type="Animation" id="Animation_qk7on"]
resource_name = "slash_3"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("handle_longsword/RolandDurandal:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.37008, 1.4347]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sbkxi"]
_data = {
"RESET": SubResource("Animation_l8pln"),
"rest": SubResource("Animation_grpq3"),
"slash_1": SubResource("Animation_0777c"),
"slash_2": SubResource("Animation_c6eh3"),
"slash_3": SubResource("Animation_qk7on")
}

[node name="sword" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_utta7")

[node name="cdtimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="handle_longsword" type="Marker2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_cdjli")

[node name="RolandDurandal" type="Sprite2D" parent="handle_longsword"]
unique_name_in_owner = true
position = Vector2(1, 1)
texture = ExtResource("1_iq463")
offset = Vector2(67, -1)

[node name="hitbox" type="Area2D" parent="handle_longsword/RolandDurandal"]
unique_name_in_owner = true
visible = false
position = Vector2(-1, -1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="handle_longsword/RolandDurandal/hitbox"]
position = Vector2(112.5, 0)
shape = SubResource("RectangleShape2D_102v0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sws4n")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sbkxi")
}
blend_times = [&"rest", &"slash_1", 0.2, &"slash_3", &"rest", 0.4, &"slash_3", &"slash_2", 0.1, &"slash_1", &"rest", 0.4, &"slash_1", &"slash_2", 0.1, &"slash_2", &"rest", 0.4, &"slash_2", &"slash_3", 0.1]

[node name="DonQuixote" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.28, 0.291815)
texture = ExtResource("4_tian4")

[node name="stimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="cdtimer" to="." method="_on_cdtimer_timeout"]
[connection signal="timeout" from="stimer" to="." method="_on_stimer_timeout"]
